<resources>
    <string name="app_name">Simple Kanban</string>
    <string name="tab_text_1">To Do</string>
    <string name="tab_text_2">In Progress</string>
    <string name="tab_text_3">Done</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>
    <string name="radiobutton_todo">To Do</string>
    <string name="radiobutton_in_progress">In Progress</string>
    <string name="radiobutton_done">Done</string>
    <string name="text_insert">Insert</string>
    <string name="text_date">Date</string>
    <string name="text_type">Type</string>
    <string name="text_details">Details</string>
    <string name="text_delete">Delete</string>
    <string name="text_edit">Edit</string>
    <string-array name="array_colors">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
    </string-array>
</resources>